--- a/Client_App/Views/ProgressBar/ExcelExportProgressBar.axaml
+++ b/Client_App/Views/ProgressBar/ExcelExportProgressBar.axaml
@@ -5,12 +5,12 @@
         xmlns:vm="using:Client_App.ViewModels.ProgressBar"
         mc:Ignorable="d"
         x:Class="Client_App.Views.ProgressBar.ExcelExportProgressBar"
-        Title="ExcelExportProgressBar"
+        Title="{Binding ExportType, Mode=OneWay}"
         d:DesignWidth="300" 
         d:DesignHeight="90"
         Width="300"
         Height="150"
-        SystemDecorations="None"
+        SystemDecorations="Full"
         WindowStartupLocation="CenterScreen">
 
     <Design.DataContext>
