--- a/Client_App/Views/MainWindow.axaml
+++ b/Client_App/Views/MainWindow.axaml
@@ -222,54 +222,59 @@
                     <Panel x:Name="Forms_p1"
                            HorizontalAlignment="Stretch"
                            VerticalAlignment="Stretch">
-                        <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto" MinHeight="200"/>
-                                <RowDefinition Height="*"/>
-                            </Grid.RowDefinitions>
-                            <Grid Grid.Row="0">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="3*"/>
-                                    <ColumnDefinition Width="2.7*" MaxWidth="460"/>
-                                </Grid.ColumnDefinitions>
-                                <ScrollViewer Grid.Column="0">
-                                    <Panel x:Name="Forms_p1_0" HorizontalAlignment="Stretch"/>
-                                </ScrollViewer>
-                                <Panel x:Name="Forms_p1_B" 
-                                       Grid.Column="1"
-                                       HorizontalAlignment="Stretch"/>
+                        <ScrollViewer>
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto" MinHeight="200"/>
+                                    <RowDefinition Height="*"/>
+                                </Grid.RowDefinitions>
+                                <Grid Grid.Row="0">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="3*"/>
+                                        <ColumnDefinition Width="2.7*" MaxWidth="460"/>
+                                    </Grid.ColumnDefinitions>
+                                    <ScrollViewer Grid.Column="0">
+                                        <Panel x:Name="Forms_p1_0" HorizontalAlignment="Stretch"/>
+                                    </ScrollViewer>
+                                    <Panel x:Name="Forms_p1_B"
+                                           Grid.Column="1"
+                                           HorizontalAlignment="Stretch"/>
+                                </Grid>
+                                <Panel x:Name="Forms_p1_X"
+                                       Grid.Row="1"
+                                       Margin="0,5,0,0"
+                                       HorizontalAlignment="Stretch"
+                                       VerticalAlignment="Stretch"/>
                             </Grid>
-                            <Panel x:Name="Forms_p1_X"
-                                   Grid.Row="1"
-                                   Margin="0,5,0,0"
-                                   HorizontalAlignment="Stretch"
-                                   VerticalAlignment="Stretch"/>
-                        </Grid>
+                        </ScrollViewer>
                     </Panel>
                 </TabItem>
                 <TabItem x:Name="Forms2" Header="Формы 2">
-                    <Panel x:Name="Forms_p2" VerticalAlignment="Stretch">
-                        <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto" MinHeight="220"/>
-                                <RowDefinition Height="*"/>
-                            </Grid.RowDefinitions>
-                            <Grid Grid.Row="0">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="3*"/>
-                                    <ColumnDefinition Width="2.2*" MaxWidth="625"/>
-                                </Grid.ColumnDefinitions>
-                                <ScrollViewer Grid.Column="0">
-                                    <Panel x:Name="Forms_p2_0"/>
-                                </ScrollViewer>
-                                <Panel x:Name="Forms_p2_B" Grid.Column="1"/>
+                    <Panel x:Name="Forms_p2" 
+                           VerticalAlignment="Stretch">
+                        <ScrollViewer>
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto" MinHeight="220"/>
+                                    <RowDefinition Height="*"/>
+                                </Grid.RowDefinitions>
+                                <Grid Grid.Row="0">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="3*"/>
+                                        <ColumnDefinition Width="2.2*" MaxWidth="625"/>
+                                    </Grid.ColumnDefinitions>
+                                    <ScrollViewer Grid.Column="0">
+                                        <Panel x:Name="Forms_p2_0"/>
+                                    </ScrollViewer>
+                                    <Panel x:Name="Forms_p2_B" Grid.Column="1"/>
+                                </Grid>
+                                <Panel
+                                    x:Name="Forms_p2_X"
+                                    Grid.Row="1"
+                                    Margin="0,5,0,0"
+                                    VerticalAlignment="Stretch"/>
                             </Grid>
-                            <Panel
-                                x:Name="Forms_p2_X"
-                                Grid.Row="1"
-                                Margin="0,5,0,0"
-                                VerticalAlignment="Stretch"/>
-                        </Grid>
+                        </ScrollViewer>
                     </Panel>
                 </TabItem>
             </TabControl>
