--- a/Client_App/Views/MainWindow.axaml
+++ b/Client_App/Views/MainWindow.axaml
@@ -120,6 +120,8 @@
                     Command="{Binding ExcelExportExecutors}"
                     CommandParameter="Executors"
                     Header="Список исполнителей"/>
+                <MenuItem Command="{Binding  ExcelExportCheckLastInventoryDate}"
+                          Header="Проверка последней инвентаризации"/>
                 <MenuItem Header="Выбранная организация">
                     <MenuItem Header="Формы 1">
                         <MenuItem Command="{Binding ExcelExportForms}"
@@ -191,10 +193,11 @@
                     <MenuItem Command="{Binding ExcelExportAll}"
                               CommandParameter="SelectedOrg"
                               Header="Все формы"/>
-                    <MenuItem Header="СНК">
+                    <MenuItem Header="СНК на дату">
                         <MenuItem Command="{Binding  ExcelExportSnk}"
                                   CommandParameter="1.1"
                                   Header="Форма 1.1"/>
+                        <!--
                         <MenuItem Command="{Binding  ExcelExportSnk}"
                                   CommandParameter="1.2"
                                   Header="Форма 1.2"/>
@@ -203,7 +206,7 @@
                                   Header="Форма 1.3"/>
                         <MenuItem Command="{Binding  ExcelExportSnk}"
                                   CommandParameter="1.5"
-                                  Header="Форма 1.5"/>
+                                  Header="Форма 1.5"/>-->
                     </MenuItem>
                 </MenuItem>
                 <!--
