--- a/Client_App/Views/RadionuclideCalculation.axaml
+++ b/Client_App/Views/RadionuclideCalculation.axaml
@@ -2,7 +2,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="700"
+             mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="500"
              x:Class="Client_App.Views.RadionuclideCalculation"
              xmlns:vm="using:Client_App.ViewModels"
              x:DataType="vm:RadionuclideCalculationVM">
@@ -12,23 +12,25 @@
       <RowDefinition Height="Auto"/>
       <RowDefinition Height="Auto"/>
       <RowDefinition Height="Auto"/>
+      <RowDefinition Height="Auto"/>
+      <RowDefinition Height="Auto"/>
     </Grid.RowDefinitions>
 
     <StackPanel Grid.Row="0" Orientation="Horizontal" VerticalAlignment="Top" HorizontalAlignment="Center">
-      <TextBlock Text="Рассчет " FontSize="30"/>
+      <TextBlock Text="Рассчет " FontSize="30" Foreground="#ba9317"/>
       <TextBlock Text="{Binding RadionuclideName}" FontSize="30"/>
     </StackPanel>
 
     <Border Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0 20 0 0"
-            CornerRadius="5" BorderBrush="Black" BorderThickness="0.5" Height="50">
+            CornerRadius="5" BorderBrush="Gray" BorderThickness="0.5" Height="50">
       <StackPanel Orientation="Horizontal" Margin="20 0 20 0" VerticalAlignment="Center">
         <StackPanel Orientation="Horizontal" Margin="0 0 20 0">
-          <TextBlock Text="Обозначение " FontSize="17"/>
+          <TextBlock Text="Обозначение " FontSize="17" Foreground="#ba9317"/>
           <TextBlock Text="{Binding RadionuclideType}" FontSize="17"/>
         </StackPanel>
 
         <StackPanel Orientation="Horizontal" Margin="20 0 0 0">
-          <TextBlock Text="Период полураспада " FontSize="17"/>
+          <TextBlock Text="Период полураспада " FontSize="17" Foreground="#ba9317"/>
           <TextBlock Text="{Binding RadionuclideHalfLife}" FontSize="17" Margin="0 0 5 0"/>
           <TextBlock Text="{Binding RadionuclideUnit}" FontSize="17"/>
         </StackPanel>
@@ -36,7 +38,17 @@
     </Border>
 
     <Border Grid.Row="2" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0 20 0 0"
-        CornerRadius="5" BorderBrush="Black" BorderThickness="0.5" MaxHeight="550">
+        CornerRadius="5" BorderBrush="Gray" BorderThickness="0.5" Height="60">
+      <WrapPanel Orientation="Horizontal" Margin="20" VerticalAlignment="Center">
+        <RadioButton GroupName="Second Group" Margin="0 0 10 0"
+                      Content="По диапозону дат" Foreground="Gray" Command="{Binding BorderOneVisibleCommand}"/>
+        <RadioButton GroupName="Second Group" Margin="10 0 0 0"
+                  Content="По отрезку времени" Foreground="Gray" Command="{Binding BorderTwoVisibleCommand}"/>
+      </WrapPanel>
+    </Border>
+
+    <Border Grid.Row="3" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0 20 0 0" IsVisible="{Binding VisibleBorderOne}"
+        CornerRadius="5" BorderBrush="LightGray" BorderThickness="0.5" MaxHeight="550">
       <Grid Margin="10 20 10 20">
         <Grid.RowDefinitions>
           <RowDefinition Height="Auto"/>
@@ -46,14 +58,16 @@
         </Grid.RowDefinitions>
 
         <WrapPanel Grid.Row="0" Orientation="Horizontal" Margin="20 0 20 0" VerticalAlignment="Center">
-          <TextBlock Text="Укажите начальную активность " FontSize="17"/>
-          <TextBox Text="{Binding InitialActivity}" FontSize="17" Margin="10 -5 0 0" Width="50" TextWrapping="Wrap"/>
+          <TextBlock Text="Укажите начальную активность " Foreground="#ba9317" FontSize="17"/>
+          <TextBox Text="{Binding InitialActivity}" FontSize="17" Margin="10 -5 0 0" Width="50" TextWrapping="Wrap"
+                   CornerRadius="5" BorderBrush="LightGray"/>
         </WrapPanel>
 
         <WrapPanel Grid.Row="1" Orientation="Horizontal" Margin="20 10 0 0" VerticalAlignment="Center">
-          <TextBlock Text="Укажите прошедшее время " FontSize="17"/>
-          <TextBox Text="{Binding ElapsedTime}" FontSize="17" Margin="10 -5 0 0" Width="50" TextWrapping="Wrap"/>
-          <ComboBox SelectedItem="{Binding SelectedTimeUnit}" FontSize="17" MinWidth="100" Margin="10 0 0 0" Items="{Binding TimeUnits}">
+          <TextBlock Text="Укажите прошедшее время " Foreground="#ba9317" FontSize="17"/>
+          <TextBox Text="{Binding ElapsedTime}" FontSize="17" Margin="10 -5 0 0" Width="50" TextWrapping="Wrap" CornerRadius="5" BorderBrush="LightGray"/>
+          <ComboBox SelectedItem="{Binding SelectedTimeUnit}" FontSize="17" MinWidth="100" Margin="10 0 0 0" 
+                    Items="{Binding TimeUnits}" CornerRadius="5" BorderBrush="LightGray">
             <ComboBox.ItemTemplate>
               <DataTemplate>
                 <TextBlock Text="{Binding DisplayName}" />
@@ -62,12 +76,52 @@
           </ComboBox>
         </WrapPanel>
 
-        <Button Grid.Row="2" Content="Рассчитать" Command="{Binding CalculateCommand}" FontSize="17" HorizontalAlignment="Center" Margin="0 20 0 0"/>
+        <Button Grid.Row="2" Content="Рассчитать" Command="{Binding CalculateOneCommand}" FontSize="15" Foreground="White"
+                 HorizontalAlignment="Center" Margin="0 20 0 0" CornerRadius="7" Padding="10" Background="#ba9317"/>
 
-        <WrapPanel Grid.Row="3" Orientation="Horizontal" Margin="20 40 0 0" VerticalAlignment="Center">
-          <TextBlock Text="Остаточная активность:" FontSize="17"/>
-          <TextBlock Text="{Binding Result}" Margin="10 0 0 0" FontSize="17" HorizontalAlignment="Right"/>
+        <Border Grid.Row="3" Margin="20 40 0 0" VerticalAlignment="Center" HorizontalAlignment="Center"
+                IsVisible="{Binding VisibleResult}" CornerRadius="10" BorderBrush="LightGray" BorderThickness="1" Padding="20">
+          <WrapPanel Orientation="Horizontal">
+            <TextBlock Text="Остаточная активность " FontSize="14" Foreground="#ba9317"/>
+            <TextBlock Text="{Binding Result}" Margin="10 0 0 0" FontSize="17" HorizontalAlignment="Right"/>
+          </WrapPanel>
+        </Border>
+      </Grid>
+    </Border>
+
+    <Border Grid.Row="4" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0 20 0 0"
+      CornerRadius="5" BorderBrush="LightGray" BorderThickness="0.5" MaxHeight="550" IsVisible="{Binding VisibleBorderTwo}">
+      <Grid Margin="10 20 10 20">
+        <Grid.RowDefinitions>
+          <RowDefinition Height="Auto"/>
+          <RowDefinition Height="Auto"/>
+          <RowDefinition Height="Auto"/>
+          <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+
+        <WrapPanel Grid.Row="0" Orientation="Horizontal" Margin="20 0 20 0" VerticalAlignment="Center">
+          <TextBlock Text="Укажите начальную активность " FontSize="17" Foreground="#ba9317"/>
+          <TextBox Text="{Binding InitialActivity}" FontSize="17" Margin="10 -5 0 0" Width="50" TextWrapping="Wrap"
+                   CornerRadius="5" BorderBrush="LightGray"/>
         </WrapPanel>
+
+        <WrapPanel Grid.Row="1" Orientation="Vertical" Margin="0 25 0 0" HorizontalAlignment="Center">
+          <DatePicker DayFormat="ddd dd" Header="Дата начальной активности"
+                      Foreground="#ba9317" SelectedDate="{Binding StartDate}"/>
+          <DatePicker DayFormat="ddd dd" Header="Дата остаточной активности"
+                      Foreground="#ba9317" SelectedDate="{Binding EndDate}"/>
+        </WrapPanel>
+
+        <Button Grid.Row="2" Content="Рассчитать" Command="{Binding CalculateTwoCommand}" FontSize="15" Foreground="White"
+                HorizontalAlignment="Center" Margin="0 20 0 0" CornerRadius="7" Padding="10" Background="#ba9317"/>
+
+        <Border Grid.Row="3" Margin="20 40 0 0" VerticalAlignment="Center" HorizontalAlignment="Center"
+                IsVisible="{Binding VisibleResult}" CornerRadius="10" BorderBrush="LightGray" BorderThickness="1" Padding="20">
+          <WrapPanel Orientation="Horizontal">
+            <TextBlock Text="Остаточная активность " FontSize="14" Foreground="#ba9317"/>
+            <TextBlock Text="{Binding Result}" Margin="10 0 0 0" FontSize="17" HorizontalAlignment="Right"/>
+          </WrapPanel>
+        </Border>
       </Grid>
     </Border>
   </Grid>
