--- a/Client_App/Views/MainWindow.axaml
+++ b/Client_App/Views/MainWindow.axaml
@@ -213,6 +213,9 @@
                         <MenuItem Command="{Binding  ExcelExportCheckInventories}"
                                   CommandParameter="1.1"
                                   Header="Форма 1.1"/>
+                        <MenuItem Command="{Binding  ExcelExportCheckInventories}"
+                                  CommandParameter="1.3"
+                                  Header="Форма 1.3"/>
                     </MenuItem> 
                 </MenuItem>
                 <!--
