--- a/Client_App/Views/Calculator.axaml
+++ b/Client_App/Views/Calculator.axaml
@@ -5,7 +5,7 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         Width="500" Height="600"
         WindowStartupLocation="CenterScreen"
-        x:Class="Client_App.Calculator"
+        x:Class="Client_App.Views.Calculator"
         xmlns:views="clr-namespace:Client_App.Views"
         xmlns:vm="clr-namespace:Client_App.ViewModels"
         x:DataType="vm:CheckFormVM"
@@ -26,12 +26,9 @@
     <vm:CalculatorVM/>
   </Design.DataContext>
 
-  <Grid VerticalAlignment="Top">
-    <Grid.RowDefinitions>
-      <RowDefinition Height="*"/>
-    </Grid.RowDefinitions>
+  <Grid VerticalAlignment="Top" RowDefinitions="*">
 
-    <Border Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Top">
+      <Border Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Top">
       <ContentControl Content="{Binding CurrentView}"/>
     </Border>
   </Grid>
