--- a/Client_App/Views/RadionuclideSelectionCalculator.axaml
+++ b/Client_App/Views/RadionuclideSelectionCalculator.axaml
@@ -11,18 +11,25 @@
     <vm:RadionuclideSelectionCalculatorVM/>
   </Design.DataContext>
 
-  <Grid HorizontalAlignment="Center" VerticalAlignment="Top">
-    <Grid.RowDefinitions>
-      <RowDefinition Height="Auto"/>
-      <RowDefinition Height="Auto"/>
-      <RowDefinition Height="*"/>
-    </Grid.RowDefinitions>
+  <Grid HorizontalAlignment="Center" 
+        VerticalAlignment="Top" 
+        RowDefinitions="Auto,Auto,*">
 
-    <TextBlock Grid.Row="0" Text="Выберите радионуклид" FontSize="30" 
-                VerticalAlignment="Top" HorizontalAlignment="Center"/>
+      <TextBlock Grid.Row="0" 
+                 Text="Выберите радионуклид" 
+                 FontSize="30" 
+                 VerticalAlignment="Top" 
+                 HorizontalAlignment="Center"/>
 
-    <TextBox Grid.Row="1" Text="{Binding SearchText}" HorizontalAlignment="Center" VerticalAlignment="Top"
-         Width="300" Margin="0 30 0 0" TextWrapping="Wrap" Watermark="Поиск по наименованию или по символу" TextAlignment="Center"/>
+    <TextBox Grid.Row="1" 
+             Text="{Binding SearchText}" 
+             HorizontalAlignment="Center" 
+             VerticalAlignment="Top"
+             Width="300" 
+             Margin="0 30 0 0" 
+             TextWrapping="Wrap" 
+             Watermark="Поиск по наименованию или по символу" 
+             TextAlignment="Center"/>
 
     <DataGrid Grid.Row="2"
               Items="{Binding FilteredRadionuclidList}"
@@ -32,12 +39,22 @@
               Margin="10"
               HeadersVisibility="Column">
       <DataGrid.Columns>
-        <DataGridTextColumn Header="Наименование" Binding="{Binding Name}" Width="*"/>
-        <DataGridTextColumn Header="Символ" Binding="{Binding CodeNumber}" Width="*"/>
+          <DataGridTextColumn Header="№"
+
+                              Width="30"/>
+          <DataGridTextColumn Header="Наименование" 
+                              Binding="{Binding Name}" 
+                              Width="*"/>
+        <DataGridTextColumn Header="Символ" 
+                            Binding="{Binding CodeNumber}" 
+                            Width="*"/>
         <DataGridTemplateColumn Header="Действие">
           <DataGridTemplateColumn.CellTemplate>
             <DataTemplate>
-              <Button Content="Выбрать" Command="{Binding DataContext.SelectRadionuclidCommand, RelativeSource={RelativeSource AncestorType=UserControl}}" CommandParameter="{Binding}" Margin="5"/>
+              <Button Content="Выбрать" 
+                      Command="{Binding DataContext.SelectRadionuclidCommand, RelativeSource={RelativeSource AncestorType=UserControl}}" 
+                      CommandParameter="{Binding}" 
+                      Margin="5"/>
             </DataTemplate>
           </DataGridTemplateColumn.CellTemplate>
         </DataGridTemplateColumn>
