--- a/Client_App/App.axaml
+++ b/Client_App/App.axaml
@@ -8,15 +8,17 @@
         <local:ViewLocator/>
     </Application.DataTemplates>
 
-    <!--
+    
     <Application.Resources>
+        <!--
         <ResourceDictionary>
             <DataTemplate DataType="{x:Type vm:CheckFormVM}">
                 <v:CheckForm/>
             </DataTemplate>
         </ResourceDictionary>
+        -->
     </Application.Resources>
-    -->
+
 
     <Application.Styles>
         <!--FluentTheme Mode="Light"/-->
@@ -26,5 +28,46 @@
         <StyleInclude Source="avares://Avalonia.Themes.Default/DefaultTheme.xaml"/>
         <StyleInclude Source="avares://Avalonia.Themes.Default/Accents/BaseLight.xaml"/>
         <StyleInclude Source="avares://Avalonia.Controls.DataGrid/Themes/Default.xaml"/>
+
+        <Style Selector="HeaderedContentControl">
+            <Setter Property="Template">
+                <ControlTemplate>
+                    <Grid 
+                        RowDefinitions="Auto,*" 
+                        ColumnDefinitions="Auto,*">
+
+                        <!-- Header -->
+                        <Border
+                            Grid.Row="0"
+                            Grid.Column="0"
+                            ZIndex="1"
+                            Background="White"
+                            Padding="5,0,5,0"
+                            Margin="5,0,0,0">
+                            <TextBlock
+                                Text="{TemplateBinding Header}"
+                                FontWeight="Bold"/>
+                        </Border>
+
+                        <!-- Content Area -->
+                        <Border
+                            Grid.Row="0" Grid.RowSpan="2"
+                            Padding="0,5,0,0"
+                            Grid.Column="0" Grid.ColumnSpan="2"
+                            CornerRadius="4"
+                            Margin="0,10,0,0"
+                            BorderBrush="Black"
+                            
+                            BorderThickness="1">
+                            <ContentPresenter
+                                Name="PART_ContentPresenter"
+                                Padding="8"
+                                Content="{TemplateBinding Content}"/>
+                        </Border>
+                    </Grid>
+                </ControlTemplate>
+            </Setter>
+        </Style>
+
     </Application.Styles>
 </Application>
