--- a/Client_App/Views/Calculator/ActivityCalculator.axaml
+++ b/Client_App/Views/Calculator/ActivityCalculator.axaml
@@ -3,40 +3,288 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:vm="clr-namespace:Client_App.ViewModels.Calculator"
-        d:DataContext="{d:DesignInstance Type=vm:ActivityCalculatorVM}"
+        xmlns:tools="clr-namespace:Client_App.Tools"
+        xmlns:type="clr-namespace:Client_App.Tools.ConverterType"
+        xmlns:converter="clr-namespace:Client_App.Resources.CustomConverters"
+        xmlns:sys="clr-namespace:System;assembly=System.Runtime"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="Client_App.Views.Calculator.ActivityCalculator"
-        Height="600"
-        Width="800"
-        Title="ActivityCalculator">
+        Width="{Binding Source={x:Type type:Width}, Converter={tools:RatioConverter}, ConverterParameter='0.35', FallbackValue='600', Mode=OneWay}"
+        Height="{Binding Source={x:Type type:Height}, Converter={tools:RatioConverter}, ConverterParameter='0.5', FallbackValue='800', Mode=OneWay}"
+        MinHeight="400"
+        MinWidth="650"
+        WindowStartupLocation="CenterScreen"
+        Title="Пересчет активности">
 
-    <Grid ColumnDefinitions="*,2*">
+    <Design.DataContext>
+        <vm:ActivityCalculatorVM/>
+    </Design.DataContext>
 
-        <StackPanel 
+    <Window.Resources>
+        <converter:BoolInverterConverter x:Key="BoolInverterConverter"></converter:BoolInverterConverter>
+    </Window.Resources>
+
+    <Grid 
+        ColumnDefinitions="0.4*,0.6*" 
+        RowDefinitions="0.1*,0.3*,0.6*">
+
+        <HeaderedContentControl 
             Grid.Column="0" 
-            Margin="5,5,5,5" 
-            Orientation="Vertical">
+            Grid.Row="0" 
+            Grid.RowSpan="3"
+            Margin="5,5,0,5"
+            Header="Справочник радионуклидов">
+            <Grid RowDefinitions="Auto,*">
+                <TextBox
+                    Grid.Row="0"
+                    Margin="5"
+                    Text="{Binding Path=Filter}"
+                    Watermark="Фильтр"/>
+                <DataGrid
+                    Grid.Row="1"
+                    AutoGenerateColumns="False"
+                    CanUserResizeColumns="True"
+                    CanUserReorderColumns="False"
+                    Margin="5"
+                    Items="{Binding Path=Radionuclids}"
+                    SelectedItem="{Binding Path=SelectedNuclid, Mode=TwoWay}">
+                    <DataGrid.Columns>
+                        <DataGridTextColumn
+                            x:DataType="vm:Radionuclid"
+                            Width="0.7*"
+                            Header="Радионуклид"
+                            IsReadOnly="True"
+                            Binding="{Binding Path=Name}"/>
+                        <DataGridTextColumn
+                            x:DataType="vm:Radionuclid"
+                            Width="0.3*"
+                            Header="Обозначение:"
+                            IsReadOnly="True"
+                            Binding="{Binding Path=Abbreviation}"/>
+                    </DataGrid.Columns>
+                </DataGrid>
+            </Grid>
+        </HeaderedContentControl>
+
+        <HeaderedContentControl
+            Grid.Column="1"
+            Grid.Row="0"
+            Grid.RowSpan="2"
+            Margin="5"
+            Header="Выбранный нуклид">
+            <Grid RowDefinitions="Auto,Auto,Auto">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="0.25*" MinWidth="125"/>
+                    <ColumnDefinition Width="0.65*" MinWidth="125"/>
+                    <ColumnDefinition Width="0.1*" MinWidth="50"/>
+                </Grid.ColumnDefinitions>
+                <TextBlock
+                    Grid.Column="0"
+                    Grid.Row="0"
+                    Margin="5"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Center"
+                    Text="Обозначение"/>
+                <TextBox
+                    Grid.Column="1"
+                    Grid.ColumnSpan="2"
+                    Grid.Row="0"
+                    ContextMenu="{x:Null}"
+                    IsHitTestVisible="False"
+                    IsReadOnly="True"
+                    HorizontalAlignment="Stretch"
+                    HorizontalContentAlignment="Left"
+                    Margin="5"
+                    VerticalAlignment="Center"
+                    Text="{Binding SelectedNuclid.Abbreviation}">
+                </TextBox>
+                <TextBlock
+                    Grid.Column="0"
+                    Grid.Row="1"
+                    Margin="5"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Center"
+                    Text="Наименование"/>
+                <TextBox
+                    Grid.Column="1"
+                    Grid.ColumnSpan="2"
+                    Grid.Row="1"
+                    IsHitTestVisible="False"
+                    IsReadOnly="True"
+                    HorizontalAlignment="Stretch"
+                    HorizontalContentAlignment="Left"
+                    Margin="5"
+                    VerticalAlignment="Center"
+                    Text="{Binding SelectedNuclid.Name}"/>
+                <TextBlock
+                    Grid.Column="0"
+                    Grid.Row="2"
+                    Margin="5"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Center"
+                    Text="Период полураспада"/>
+                <TextBox
+                    Grid.Column="1"
+                    Grid.Row="2"
+                    IsHitTestVisible="False"
+                    IsReadOnly="True"
+                    HorizontalAlignment="Stretch"
+                    HorizontalContentAlignment="Left"
+                    Margin="5"
+                    VerticalAlignment="Center"
+                    Text="{Binding SelectedNuclid.Halflife}"/>
+                <TextBlock
+                    Grid.Column="2"
+                    Grid.Row="2"
+                    Margin="5"
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Center"
+                    Text="{Binding SelectedNuclid.Unit}"/>
+            </Grid>
+        </HeaderedContentControl>
+
+        <HeaderedContentControl 
+            Grid.Column="1"
+            Grid.Row="2"
+            Margin="5"
+            Header="Пересчёт активности">
+
+            <Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="0.3*" MinWidth="160"/>
+                    <ColumnDefinition Width="0.5*" MinWidth="150"/>
+                    <ColumnDefinition Width="0.2*" MinWidth="60"/>
+                </Grid.ColumnDefinitions>
+                <RadioButton
+                    Grid.Column="0"
+                    Grid.Row="0"
+                    Content="по диапазону дат"
+                    GroupName="DateType"
+                    IsChecked="{Binding IsDateRange}">
+                </RadioButton>
+                <RadioButton
+                    Grid.Column="0"
+                    Grid.Row="1"
+                    Content="по отрезку времени"
+                    GroupName="DateType"
+                    IsChecked="{Binding IsDateRange, Converter={StaticResource BoolInverterConverter}}">
+                </RadioButton>
+                <TextBlock
+                    Grid.Column="0"
+                    Grid.Row="2"
+                    Margin="5"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Center"
+                    Text="Начальная активность"/>
+                <TextBox
+                    Grid.Column="1"
+                    Grid.Row="2"
+                    Margin="5"
+                    HorizontalAlignment="Stretch"
+                    HorizontalContentAlignment="Left"
+                    VerticalAlignment="Center"
+                    Text="{Binding InitialActivity}">
+                </TextBox>
+                <TextBlock
+                    Grid.Column="0"
+                    Grid.Row="3"
+                    IsVisible="{Binding IsDateRange}"
+                    Margin="5"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Center"
+                    Text="Дата начальной активности"/>
+                <CalendarDatePicker 
+                    Grid.Column="1"
+                    Grid.Row="3"
+                    IsVisible="{Binding IsDateRange}"
+                    Margin="5"
+                    HorizontalAlignment="Stretch"
+                    HorizontalContentAlignment="Left"
+                    VerticalAlignment="Center"
+                    Watermark="дд.мм.гг"
+                    SelectedDate="{Binding InitialActivityDate, Converter={x:Static converter:NullableFallbackConverter.Instance}, ConverterParameter={x:Static converter:NullableFallbackConverter.GetDateOnlyNow}}"/>
+                <TextBlock
+                    Grid.Column="0"
+                    Grid.Row="4"
+                    IsVisible="{Binding IsDateRange}"
+                    Margin="5"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Center"
+                    Text="Дата остаточной активности"/>
+                <CalendarDatePicker
+                    Grid.Column="1"
+                    Grid.Row="4"
+                    IsVisible="{Binding IsDateRange}"
+                    Margin="5"
+                    HorizontalAlignment="Stretch"
+                    HorizontalContentAlignment="Left"
+                    VerticalAlignment="Center"
+                    Watermark="дд.мм.гг"
+                    SelectedDate="{Binding ResidualActivityDate, Converter={x:Static converter:NullableFallbackConverter.Instance}, ConverterParameter={x:Static converter:NullableFallbackConverter.GetDateOnlyNow}}"/>
+                <TextBlock
+                    Grid.Column="0"
+                    Grid.Row="3"
+                    Grid.RowSpan="2"
+                    IsVisible="{Binding IsDateRange, Converter={StaticResource BoolInverterConverter}}"
+                    Margin="5"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Center"
+                    Text="Отрезок времени"/>
+                <TextBox
+                    Grid.Column="1"
+                    Grid.Row="3"
+                    Grid.RowSpan="2"
+                    IsVisible="{Binding IsDateRange, Converter={StaticResource BoolInverterConverter}}"
+                    Margin="5"
+                    HorizontalAlignment="Stretch"
+                    HorizontalContentAlignment="Left"
+                    VerticalAlignment="Center"
+                    Text="{Binding TimePeriodDouble}"/>
+                <ComboBox
+                    Grid.Column="2"
+                    Grid.Row="3"
+                    Grid.RowSpan="2"
+                    IsVisible="{Binding IsDateRange, Converter={StaticResource BoolInverterConverter}}"
+                    Margin="5"
+                    HorizontalAlignment="Stretch"
+                    HorizontalContentAlignment="Left"
+                    VerticalAlignment="Center"
+                    Items="{Binding TimeUnitArray}"
+                    SelectedItem="{Binding SelectedTimeUnit}">
+                </ComboBox>
+                <TextBlock
+                    Grid.Column="0"
+                    Grid.Row="5"
+                    Margin="5"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Center"
+                    Text="Остаточная активность"/>
+                <TextBox
+                    Grid.Column="1"
+                    Grid.Row="5"
+                    Margin="5"
+                    IsHitTestVisible="False"
+                    HorizontalAlignment="Stretch"
+                    HorizontalContentAlignment="Left"
+                    VerticalAlignment="Center"
+                    Text="{Binding ResidualActivity}"/>
                 
-            <TextBox Text="{Binding Path=StringSearch}"/>
-            <DataGrid 
-                AutoGenerateColumns="False"
-                CanUserResizeColumns="True"
-                CanUserReorderColumns="False"
-                Items="{Binding Path=Radionuclids}">
+            </Grid>
 
+            <!-- 
+            <RadioButton 
+                Content="по диапазону дат"
+                GroupName="DateType"
+                IsChecked="True">
+            </RadioButton>
+            <RadioButton 
+                Content="по диапазону дат"
+                GroupName="DateType"
+                IsChecked="True">
+            </RadioButton>
+            -->
 
-                <DataGrid.Columns>
-                    <DataGridTextColumn
-                        x:DataType="vm:Radionuclid"
-                        Width="auto"
-                        Header="Рег.№"
-                        IsReadOnly="True"
-                            ></DataGridTextColumn>
-                </DataGrid.Columns>
-            </DataGrid>
-        </StackPanel>
-        <Grid Grid.Column="1">
+        </HeaderedContentControl>
 
-        </Grid>
     </Grid>
 </Window>
