--- a/Client_App/Views/Calculator/ActivityCalculator.axaml
+++ b/Client_App/Views/Calculator/ActivityCalculator.axaml
@@ -71,7 +71,7 @@
             Grid.Row="0"
             Grid.RowSpan="2"
             Margin="5"
-            Header="Выбранный нуклид">
+            Header="Выбранный радионуклид">
             <Grid RowDefinitions="Auto,Auto,Auto">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="0.25*" MinWidth="125"/>
@@ -202,7 +202,7 @@
                     HorizontalContentAlignment="Left"
                     VerticalAlignment="Center"
                     Watermark="дд.мм.гг"
-                    SelectedDate="{Binding InitialActivityDate, Converter={x:Static converter:NullableFallbackConverter.Instance}, ConverterParameter={x:Static converter:NullableFallbackConverter.GetDateOnlyNow}}"/>
+                    SelectedDate="{Binding InitialActivityDate}"/>
                 <TextBlock
                     Grid.Column="0"
                     Grid.Row="4"
@@ -220,7 +220,7 @@
                     HorizontalContentAlignment="Left"
                     VerticalAlignment="Center"
                     Watermark="дд.мм.гг"
-                    SelectedDate="{Binding ResidualActivityDate, Converter={x:Static converter:NullableFallbackConverter.Instance}, ConverterParameter={x:Static converter:NullableFallbackConverter.GetDateOnlyNow}}"/>
+                    SelectedDate="{Binding ResidualActivityDate}"/>
                 <TextBlock
                     Grid.Column="0"
                     Grid.Row="3"
